--- a/css-responsive_playground/index.html
+++ b/css-responsive_playground/index.html
@@ -53,7 +53,19 @@
           </p>
           <div class="box box--five">
             <!-- Perhaps you may want to use the <picture> Element here? -->
-            <img src="./img/cat_small.jpg" alt="A cat" />
+            <picture>
+              <source
+                media="(min-width: 1200px)"
+                srcset="./img/cat_large.jpg"
+                alt="A large cat"
+              />
+              <source
+                media="(min-width: 600px)"
+                srcset="./img/cat_medium.jpg"
+                alt="A medium cat"
+              />
+              <img src="./img/cat_small.jpg" alt="A cat" />
+            </picture>
           </div>
         </section>
       </section>
