--- a/html-forms_Finding-a11y-errors/index.html
+++ b/html-forms_Finding-a11y-errors/index.html
@@ -11,21 +11,25 @@
   </head>
   <body>
     <section>
-      <h1 class="title">Understanding A11y in Forms</h1>
+      <h1 class="title" id="title">Understanding A11y in Forms</h1>
       <p id="description">
         Please let us know how we can support you with a11y issues.
       </p>
 
       <form for="title">
-        <fieldset>
+        <fieldset aria-describedby="description">
           <legend>Enter your information</legend>
-          <label>Name:</label>
+          <label for="name-Input">Name:</label>
           <input id="name-Input" type="text" name="name" />
-          <label>Age:</label>
+          <label for="age-Input">Age:</label>
           <input id="age-Input" type="text" name="age" />
-          <label>Color you cannot see:</label>
+          <label for="color-Input">Color you cannot see:</label>
           <input id="color-Input" type="color" name="color" />
-          <textarea rows="7" placeholder="Leave us a message..."></textarea>
+          <textarea
+            rows="7"
+            input="text"
+            placeholder="Leave us a message..."
+          ></textarea>
           <button type="submit">Submit</button>
         </fieldset>
       </form>
