solved challenge and working on pizza challenge

--- a/html-forms_Finding-a11y-errors/index.html
+++ b/html-forms_Finding-a11y-errors/index.html
@@ -25,11 +25,8 @@
           <input id="age-Input" type="text" name="age" />
           <label for="color-Input">Color you cannot see:</label>
           <input id="color-Input" type="color" name="color" />
-          <textarea
-            rows="7"
-            input="text"
-            placeholder="Leave us a message..."
-          ></textarea>
+          <label for="leave-message">Leave us a message:</label>
+          <textarea rows="7" input="text" id="leave-message"></textarea>
           <button type="submit">Submit</button>
         </fieldset>
       </form>
